compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__functions__unlabelled_after_labelled_with_type.snap
---
source: compiler-core/src_refactored/__core/type_/tests/functions.rs
assertion_line: 16
expression: "fn main(wibble wibber, wobber: Int) {\n  Nil\n}"
snapshot_kind: text
---
----- SOURCE CODE
fn main(wibble wibber, wobber: Int) {
  Nil
}

----- ERROR
error: Unlabelled argument after labelled argument
  ┌─ /src/one/two.gleam:1:24
  │
1 │ fn main(wibble wibber, wobber: Int) {
  │                        ^^^^^^^^^^^

All unlabelled arguments must come before any labelled arguments.
